--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,7 @@
+pandas==1.3.*
+scipy==1.7.*
+notebook==6.4.*
+plotly==5.3.*
+tqdm==4.62.*
+statsmodels==0.13.*
 git+git://github.com/cytomining/DeepProfiler@c91b9d8#egg=deepprofiler
