--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 pandas==1.3.*
 scipy==1.7.*
 notebook==6.4.*
+ipywidgets==7.6.*
 plotly==5.3.*
 tqdm==4.62.*
 statsmodels==0.13.*
 pyarrow==6.0.*
 kaleido==0.2.*
+umap-learn==0.5.*
+openpyxl==3.0.*
 git+git://github.com/cytomining/DeepProfiler@c91b9d8#egg=deepprofiler
